<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_EBF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue_EBF"
        android:src="@drawable/image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/blue_EBF"
        android:fontFamily="serif-monospace"
        android:text="@string/main_welcome"
        android:textAlignment="center"
        android:textColor="@color/blue_061"
        android:textSize="22dp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/blue_EBF"
        android:fontFamily="@font/aldrich"
        android:text="@string/main_meeting"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/blue_EBF"
        android:fontFamily="@font/aldrich"
        android:text="@string/main_fill_information"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/amiko"
        android:hint="@string/main_name"
        android:textColorHint="@color/blue_061"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/amiko"
        android:hint="@string/main_age"
        android:inputType="number"
        android:textColorHint="@color/blue_061"
        android:textStyle="bold" />

    <Button
        android:id="@+id/touch_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:backgroundTint="@color/blue_061"
        android:fontFamily="@font/aldrich"
        android:text="@string/main_button" />

</LinearLayout>